--- a/assets/css/styleContact.css
+++ b/assets/css/styleContact.css
@@ -86,12 +86,8 @@ form{
 	min-height: 200px;
 	border-radius: 10px;
     font-size:14pt;
+    margin-bottom: 10px;
 	}
-
-.message{
-	height: 100px;
-	width: 400px;
-}
 
 
 .siteBody{
@@ -105,7 +101,6 @@ form{
 	display: inline-block;
 }
 
-
 .sidebar{
 	float: right;
 	background-color: #ffffff;	
@@ -115,7 +110,7 @@ form{
 	border-radius: 10px;
 	border: 2px solid black;
 	margin-top: 50px;
-	margin-right: 133px;
+	margin-right: 150px;
 	text-align: center;
 }
 
@@ -148,15 +143,13 @@ form{
 footer{
 	margin: auto;
 	text-align: center; 
-	margin-bottom: 10px;
-	position: relative;
-    left: 0;
-    bottom: 0;
-    height: 100px;
     width: 100%;
     font-family: Georgia, Times, "Times New Roman", serif;
     font-size: 18px;
     float: right;
     margin-top: 25px;
+    background-color: #434447;
+    padding: 15px;
+    color:#D3D3D3;
 }
 
