--- a/assets/css/styleIndex.css
+++ b/assets/css/styleIndex.css
@@ -40,6 +40,16 @@ body{
 
 }
 
+h2{
+	padding-top: 25px;
+	padding-bottom: 25px;
+	font-size: 28px;
+	font-family: Georgia, Times, "Times New Roman", serif;
+	color: #4aaaa5;
+	background-color: #ffffff;
+	margin-left: 10px;
+
+}
 hr{
 	margin-top:-21px;
 	border: 2px solid;
@@ -78,14 +88,6 @@ h2{
 
 }
 
-.viddyWell{
-	float: left;
-	margin: 10px 10px 10px 10px;
-	border: 2px solid;
-	color:#000;
-	border-radius: 10px;
-}
-
 .siteBody{
 	background-color: #ffffff;
 	align-items: center;
@@ -94,6 +96,14 @@ h2{
 	float:left;
 	border: 2px solid;
 	color:#000;
+}
+
+.viddyWell{
+	float: left;
+	margin: 10px 10px 10px 10px;
+	border: 2px solid;
+	color:#000;
+	border-radius: 10px;
 }
 
 .aboutMe{
@@ -147,15 +157,13 @@ h2{
 footer{
 	margin: auto;
 	text-align: center; 
-	margin-bottom: 10px;
-	position: relative;
-    left: 0;
-    bottom: 0;
-    height: 100px;
     width: 100%;
     font-family: Georgia, Times, "Times New Roman", serif;
     font-size: 18px;
     float: right;
     margin-top: 25px;
+    background-color: #434447;
+    padding: 15px;
+    color:#D3D3D3;
 }
 
